added raw code link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							<ul class="copyright">
 								<li>&copy; BSW'17. All rights reserved.</li>
 								<li>Developed: <a href="" style="color: white;"><b style="color: white;"></b>Ankit Solanki</a></li>
-								<li><a href="">View Raw code Here</a></li>
+								<li><a href="https://github.com/techcentaur/BSW-Website2017">View Raw code Here</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
