--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						</div>
 					</section>
 					<footer>
-						<p>LIt shall be responsibility of BSW to work towards the welfare and well-being of the student community in the campus.</p>
+						<p>It shall be responsibility of BSW to work towards the welfare and well-being of the student community in the campus.</p>
 						<ul class="actions">
 							<li>
 								<a href="#" class="button big">Discover our entire team</a>
@@ -162,7 +162,7 @@
 						<div class="8u 12u$(medium)">
 							<ul class="copyright">
 								<li>&copy; BSW'17. All rights reserved.</li>
-								<li>Developed: <a href="" style="color: white;"><b style="color: white;"></b>Ankit Solanki</a></li>
+								<li>Developed by <a href="" style="color: white;"><b style="color: white;"></b>Ankit Solanki</a></li>
 								<li><a href="https://github.com/techcentaur/BSW-Website2017">View Raw code Here</a></li>
 							</ul>
 						</div>
